# Echo-Mate

./: .gitignore  .gitmodules  README.md  docker-compose.yml
Demo/: .gitignore
Demo/AIChat_demo/Client/: CMakeLists.txt  main.cc
Demo/AIChat_demo/Client/Application/: Application.cc  Application.h  IntentsRegistry.cc  IntentsRegistry.h  StateConfig.cc  StateConfig.h  WS_Handler.cc  WS_Handler.h
Demo/AIChat_demo/Client/Application/UserIntents/: RobotMove.cc  RobotMove.h  VolumeControl.cc  VolumeControl.h
Demo/AIChat_demo/Client/Application/UserStates/: Idle.cc  Startup.cc  Thinking.cc
Demo/AIChat_demo/Client/Audio/: AudioProcess copy.cc  AudioProcess.cc  AudioProcess.h
Demo/AIChat_demo/Client/Events/: EventQueue.h
Demo/AIChat_demo/Server/: main.py
Demo/AIChat_demo/Server/config/: settings.py
Demo/AIChat_demo/Server/handle/: text_handler.py
Demo/AIChat_demo/Server/models/: llm_model.py
Demo/AIChat_demo/Server/services/: chat_service.py
Demo/AIChat_demo/Server/tools/: logger.py
Demo/DeskBot_demo/: CMakeLists.txt  main.c
Demo/DeskBot_demo/common/: CMakeLists.txt
Demo/DeskBot_demo/common/sys_manager/: sys_manager.c
Demo/DeskBot_demo/conf/: dev_conf.h
Demo/DeskBot_demo/gui_app/: CMakeLists.txt  ui.c  ui.h
Demo/DeskBot_demo/gui_app/pages/ui_CalculatorPage/: ui_CalculatorPage.c
Demo/DeskBot_demo/gui_app/pages/ui_ChatBotPage/: app_ChatBotPage.c  ui_ChatBotPage.c
Demo/DeskBot_demo/gui_app/pages/ui_DrawPage/: ui_DrawPage.c
Demo/DeskBot_demo/gui_app/pages/ui_Game2048Page/: ui_Game2048Page.c
Demo/DeskBot_demo/gui_app/pages/ui_GameMemoryPage/: ui_GameMemoryPage.c
Demo/DeskBot_demo/gui_app/pages/ui_HomePage/: ui_HomePage.c
Demo/DeskBot_demo/gui_app/pages/ui_SettingPage/: ui_SettingPage.c
Demo/DeskBot_demo/gui_app/pages/ui_WeatherPage/: app_WeatherPage.c  ui_WeatherPage.c
Demo/DeskBot_demo/gui_app/pages/ui_YoloPage/: ui_YoloPage.c  ui_YoloPage.h
Demo/DeskBot_demo/lvgl/src/widgets/calendar/: lv_calendar_header_dropdown.c
Demo/DeskBot_demo/utils/: system_para.conf
